# TabPFN

./: CITATION.bib  CITATION.cff  NOTICE.txt  PrepareDatasets.ipynb  PriorFittingCustomPrior.ipynb  QuickPredictionDemo.ipynb  README.md  SyntheticGPAblation.ipynb  TabPFNPredictionOnly.ipynb  TabularEvaluationVisualization.ipynb  TrainingTuningAndPrediction.ipynb  cc_test_datasets_multiclass.pickle  differentiable_pfn_evaluation.py  eddie-plots.py  encoders.py  how_to_put_on_pypi.md  layer.py  losses.py  model_builder.py  notebook_utils.py  pyproject.toml  requirements.txt  setup.py  tabular_evaluation.py  train.py  transformer.py  transformer_prediction_interface.py  utils.py
datasets/: __init__.py
priors/: __init__.py  differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior.py  prior_bag.py  utils.py
scripts/: decision_boundary.py  differentiable_pfn_evaluation.py  model_builder.py  model_configs.py  tabular_baselines.py  tabular_evaluation.py  tabular_metrics.py  transformer_prediction_interface.py
tabpfn/: PrepareDatasets.ipynb  PriorFittingCustomPrior.ipynb  QuickPredictionDemo.ipynb  RunFullDatasetAnalyses.ipynb  __init__.py  debug.ipynb  decoders.py  encoders.py  initializers.py  layer.py  losses.py  model_configs.py  positional_encodings.py  test_simple_sklearn_interface.ipynb  train.py  transformer.py  utils.py
tabpfn/datasets/: __init__.py  utils.py
tabpfn/priors/: __init__.py  differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  utils.py
tabpfn/scripts/: baseline_prediction_interface.py  differentiable_pfn_evaluation.py  model_builder.py  tabular_baselines.py  tabular_baselines_deep.py  tabular_evaluation.py  tabular_metrics.py  transformer_prediction_interface.py
tabpfn/tests/: test_deterministic_and_model_caching.py  test_follow_sklearn_interface.py  test_get_gradients.py  test_load_module_only_inference.py  test_standardization.py
