[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabpfn"
version = "0.1.5"
authors = [
{name="Noah Hollmann"},
{name="Samuel Müller", email="muellesa@tf.uni-freiburg.de"},
{name="Katharina Eggensperger"},
{name="Frank Hutter"},
]
description = "Interface for using TabPFN and library to train TabPFN'"
readme = "README.md"
requires-python = ">=3.7"
dependencies=[
        'gpytorch>=1.5.0',
        'torch>=1.9.0',
        'scikit-learn>=0.24.2',
        'pyyaml>=5.4.1',
        'seaborn>=0.11.2',
        'tqdm>=4.62.1',
        'numpy>=1.21.2',
        'openml>=0.12.2',
        'hyperopt>=0.2.5',
        'configspace>=0.4.21',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude = [
  "*.cpkt",
]

[project.optional-dependencies]
baselines = [
    'catboost>=0.26.1',
    'auto-sklearn>=0.14.5',
    'xgboost>=1.4.0',
]

[project.urls]
"Homepage" = "https://github.com/automl/TabPFN'"
